--- a/IDEet.tex
+++ b/IDEet.tex
@@ -14,6 +14,7 @@
 \usepackage{amsmath}
 \usepackage{multirow}
 \usepackage[colorlinks=true, linkcolor=purple, citecolor=blue]{hyperref}
+\usepackage[usenames,dvipsnames]{xcolor}
 
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
@@ -50,7 +51,7 @@
 
 \bibliographystyle{unsrt}
 \DeclareMathOperator{\sgn}{sgn}
-\usepackage[usenames,dvipsnames]{xcolor}
+
 
 \begin{document}
 
@@ -66,8 +67,9 @@ University, Shenyang 110819, China}
 \author{Jing-Fei Zhang}
 \affiliation{Department of Physics, College of Sciences, Northeastern
 University, Shenyang 110819, China}
-%\author{}
-%\affiliation{Department of Physics, College of Sciences, Northeastern University, Shenyang 110819, China}
+\author{}
+\affiliation{Department of Physics, College of Sciences, Northeastern
+University, Shenyang 110819, China}
 
 \author{Xin Zhang\footnote{Corresponding author}}
 \email{zhangxin@mail.neu.edu.cn}
@@ -79,9 +81,8 @@ for Smart Industry, Northeastern University, Shenyang 110819, China}
 \date{\today}
 
 \begin{abstract}
-In this work, we investigate the impacts of the gravitational-wave (GW) standard siren observation of the Einstein Telescope (ET) on constraining the interacting dark energy models. We simulate 1000 GW events data in the redshift range  $0\lesssim z \lesssim 5$ based on the 10 years observation of the ET. We combine the simulated GW data with the current mainstream cosmological electromagnetic observations including the cosmic microwave background (CMB) anisotroties observation, the baryon acoustic oscillations (BAO), and the type Ia supernovae (SN) observation (Pantheon compilation) to constrain these models. We consider two typical interacting dark energy (IDE) models, i.e., the I$\Lambda$CDM model and I$w$CDM model, in the context of a perturbed universe. To avoid the large-scale instability problem for IDE models, we apply the parameterized post-Friedmann (PPF) approach to do the analysis. We find that the addition of GW standard siren data could improve the constraint accuracies on most of the cosmological parameters (e.g., $H_{0}$, $w$, and $\Omega_{\rm m}$) significantly. \red{For the coupling constant $\beta$, the absolute constraint errors could also be slightly improved when adding the GW data in the cosmological fit}.
+In this work, we investigate the impacts of the gravitational-wave (GW) standard siren observation of the Einstein Telescope (ET) on constraining the interacting dark energy models. We simulate 1000 GW events data in the redshift range  $0\lesssim z \lesssim 5$ based on the 10 years observation of ET. We combine the simulated GW data with the current mainstream cosmological electromagnetic observations including the cosmic microwave background (CMB) anisotropies observation, the baryon acoustic oscillations (BAO), and the type Ia supernovae (SN) observation (Pantheon compilation) to constrain these models. We consider two typical interacting dark energy (IDE) models, i.e., the I$\Lambda$CDM model and I$w$CDM model, in the context of a perturbed universe. To avoid the large-scale instability problem for IDE models, we apply the parameterized post-Friedmann (PPF) approach to do the analysis. We find that the addition of GW standard siren data could improve the constraint accuracies on most of the cosmological parameters (e.g., $H_{0}$, $w$, and $\Omega_{\rm m}$) significantly. For the coupling constant $\beta$, the absolute constraint errors could also be slightly improved when adding the GW data in the cosmological fit.
 
-%model of vacuum energy interacting with cold dark matter (I$\Lambda$CDM) and the interacting $w$ cold dark matter (I$w$CDM) model
 \end{abstract}
 %\pacs{95.36.+x, 98.80.Es, 98.80.-k}
 \maketitle
@@ -108,8 +109,8 @@ The detection of GW event GW170817 from the merge of binary neutron star (BNS) a
 Actually, in the near future, a planed third-generation ground-based GW detector, the Einstein Telescope (ET), will be brought into operation \cite{ET}. This impressive equipment will hold 10 km-long arms and three detectors. Compared with the advanced LIGO, it has a much wider detection frequency range and a much better detection sensitivity. Thus, there will be much more BNS events in much deeper redshifts detected by ET. As a conservative estimation, at least 1000 useful standard siren events data will be observed with ET's ten years operation \cite{Zhang:2018byx}.
 In some previous works \cite{Zhao:2018gwk,Du:2018tia,Zhang:2018byx,Zhang:2019ple,Yang:2019bpr,Yang:2019vni,Bachega:2019fki,Zhang:2019loq,Zhang:2019ylr,Chang:2019xcb,He:2019dhl}, the authors have already utilized the GW standard siren observation to estimate the cosmological parameters in many various cosmological models. For example, in Ref. \cite{Zhang:2018byx} the authors have investigated the capability of future GW standard siren observation on improving the parameter estimation in cosmology and breaking the parameter degenracies formed in traditional EM observations. Taking ET as an example, they simulated 1000 events data based on the ten years observation and find that, the simulated GW data could largely break the parameter degeneracy in $\Lambda$CDM model as well as $w$CDM model, significantly improving the parameter constraints in the cosmological fit. In Ref. \cite{Zhang:2019loq}, the authors have also investigated the Chevalliear-Polarski-Linder (CPL) model, $\alpha$ dark energy ($\alpha$DE) model, generalized Chaplygin gas (GCG) model and new generalized Chaplygin gas (NGCG) model with the simulated GW standard siren data, and GW data could also improve the constraints on the cosmological parameters for all these DE models. Likewise, the similar conclusion was also obtained for the holographic dark energy (HDE) models in Ref. \cite{Zhang:2019ple}. 
 
-\red{As for the interacting dark energy (IDE) models, Yang et al. \cite{Yang:2019vni} have investigated how the future GW data could help improve the limits on the parameters in I$\Lambda$CDM models, finding that the addition of GW data can reduce the current uncertainty by a factor of 5. 
-In this work, we will further explore the impacts of the future GW data on improving the parameter constraints or breaking the parameter degeneracy for extensive IDE models (e.g., I$\Lambda$CDM model and I$w$CDM model).}
+As for the interacting dark energy (IDE) models, Ref.~\cite{Yang:2019vni} has recently investigated how the future GW data could help improve the limits on the parameters in two specific I$\Lambda$CDM models (with a positive coupling), finding that the addition of GW data to the CMB data can reduce the current uncertainty by a factor of 5. 
+In this work, we will further explore the impacts of the future GW data on improving the parameter constraints or breaking the parameter degeneracy for extensive IDE models (e.g., I$\Lambda$CDM model and I$w$CDM model).
 We consider another two cases of energy transfer rate, i.e., $Q=\beta H \rho_{\rm c}$ and $Q=\beta H_{0} \rho_{\rm c}$, where $\rho_{\rm c}$ is the energy density of cold dark matter. In order to treat the cosmological perturbation evolution in these models, we employ the parameterized post-Friedmann (PPF) scheme for the IDE scenario \cite{Li:2014eha} to make the calculations. This work will make the analysis of the constraining power of future GW standard siren observation on cosmological parameters more general and complete.
 
 
@@ -150,7 +151,7 @@ In the equations above, $\delta\rho_I$ is the energy density perturbation, $\del
 
 When considering the interaction between dark matter and dark energy, dark energy is treated as a nonadiabatic fluid and the calculation of $\delta p_{\rm de}$ is in terms of the adiabatic sound speed and the rest-frame sound speed. Under such circumstances, the interacting dark energy models will be confused with the problem of large-scale instability. Hence, we should treat the dark energy perturbations under the generalized PPF framework~\cite{Li:2014eha}. For clarity, in the following discussion, we will use some new symbols, i.e., $\zeta\equiv H_L$, $\xi\equiv A$, $\rho\Delta\equiv\delta\rho$, $\Delta p\equiv\delta p$, $V\equiv v$, and $\Delta Q_I\equiv\delta Q_I$, to denote the corresponding quantities of the comoving gauge, except the two gauge-independent quantities $\Pi$ and $f_I$.
 
-On the large scales, the direct relationship between $V_{\rm de} - V_T$ and $V_T$ can be established, and it can be parametrized by a function $f_\zeta(a)$ as \cite{Hu:2008zd,Fang:2008sn}
+On the large scales, the direct relationship between $V_{\rm de} - V_T$ and $V_T$ can be established, and it can be parameterized by a function $f_\zeta(a)$ as \cite{Hu:2008zd,Fang:2008sn}
 \begin{equation}
 \lim_{k_H \ll 1}\frac{4\pi G a^2}{\mathcal{H}^2}(\rho_{\rm de} + p_{\rm de})\frac{V_{\rm de} - V_T}{k_H}=-\frac{1}{3}ck_{K} f_\zeta(a) k_H V_T,\label{eq:DEcondition}
 \end{equation}
@@ -566,16 +567,16 @@ In this section, we exhibit the main constraint results in Figs.~\ref{fig1}--\re
 At first glance in these figures, we can easily find that the addition of GW standard sirens data can tighten the constraint on $H_0$ and $\Omega_{\rm m}$ significantly (except this case in the I$w$CDM2 model with $Q=\beta H_{0}\rho_{\rm c}$, which will be discussed in the following), but for the other parameters, the constraints are slightly weak.
 
 
-The constraint results for the I$\Lambda$CDM1 model with $Q=\beta H\rho_{\rm c}$ are shown in Fig.~\ref{fig1}. We find that the CBS data provided a 0.95\% measurement for $H_0$, whereas the combined CBS+GW data provided a 0.44\% measurement. For the parameter $\Omega_{\rm m}$, the CBS data can give a constraint accuracy at 2.66\%. When adding the GW data, the constraint accuracy on $\Omega_{\rm m}$ can be improved to 1.3\% level with the CBS+GW data. Obviously, both of these two parameters can be constrained more stringent with the help of GW data. \red{Note here that, since central value of the coupling constant $\beta$ in IDE models is around zero, the relative error for this parameter will be immensely influenced by the statistic fluctuations. Therefore, the absolute error is more reliable for quantifying the improvement of this parameter. The addition of the GW data will tighten the constraint on the coupling constant $\beta$, with the absolute error improved from $\sigma(\beta)=1.2 \times 10^{-3}$ to $\sigma(\beta)=9.15 \times 10^{-4}$.}
+The constraint results for the I$\Lambda$CDM1 model with $Q=\beta H\rho_{\rm c}$ are shown in Fig.~\ref{fig1}. We find that the CBS data provided a 0.95\% measurement for $H_0$, whereas the combined CBS+GW data provided a 0.44\% measurement. For the parameter $\Omega_{\rm m}$, the CBS data can give a constraint accuracy at 2.66\%. When adding the GW data, the constraint accuracy on $\Omega_{\rm m}$ can be improved to 1.3\% level with the CBS+GW data. Obviously, both of these two parameters can be constrained more stringent with the help of GW data. Note here that, since central value of the coupling constant $\beta$ in IDE models is around zero, the relative error for this parameter will be immensely influenced by the statistic fluctuations. Therefore, the absolute error is more reliable for quantifying the improvement of this parameter. The addition of the GW data will tighten the constraint on the coupling constant $\beta$, with the absolute error improved from $\sigma(\beta)=1.2 \times 10^{-3}$ to $\sigma(\beta)=9.15 \times 10^{-4}$.
 
 
-The constraint results for the I$\Lambda$CDM2 model with $Q=\beta H_{0}\rho_{\rm c}$ are shown in Fig.~\ref{fig2}. For this model, the CBS data can provide a 1.18\% measurement for $H_0$,  while the CBS+GW data can measure $H_0$ at the 0.45\% level. With respect to the parameter $\Omega_{\rm m}$, the CBS+GW data can give a constraint accuracy on $\Omega_{\rm m}$ at 2.32\%, better than the constraint from CBS data with just a 5.33\% accuracy. \red{For the coupling constant $\beta$, the result is similar to the case of I$\Lambda$CDM1 model, and the constraint error could be improved  from $\sigma(\beta)=4.4 \times 10^{-2}$ to $\sigma(\beta)=2.9 \times 10^{-2}$ with the addition of GW data.}
+The constraint results for the I$\Lambda$CDM2 model with $Q=\beta H_{0}\rho_{\rm c}$ are shown in Fig.~\ref{fig2}. For this model, the CBS data can provide a 1.18\% measurement for $H_0$,  while the CBS+GW data can measure $H_0$ at the 0.45\% level. With respect to the parameter $\Omega_{\rm m}$, the CBS+GW data can give a constraint accuracy on $\Omega_{\rm m}$ at 2.32\%, better than the constraint from CBS data with just a 5.33\% accuracy. For the coupling constant $\beta$, the result is similar to the case of I$\Lambda$CDM1 model, and the constraint error could be improved  from $\sigma(\beta)=4.4 \times 10^{-2}$ to $\sigma(\beta)=2.9 \times 10^{-2}$ with the addition of GW data.
 
-The results for the I$w$CDM1 model with $Q=\beta H\rho_{\rm c}$ are shown in Fig.~\ref{fig3}. From this figure, we find the situation is similar to that of the I$\Lambda$CDM models. We can see that the CBS data can only provide a 1.23\% measurement for $H_0$, while the combined CBS+GW data constrain the $H_0$ with a 0.47\% accuracy. As for the measurement of $\Omega_{\rm m}$, we find that the constraint result of the CBS+GW data is also better than the CBS data. When adding the GW data, the constraint accuracy of $\Omega_{\rm m}$ will be improved from 2.67\% to 1.26\%. For the parameter $w$, there is a slight improvement when adding the GW data, with the accuracy enhanced from 3.86\% to 3.22\%. \red{For coupling parameter $\beta$, the constraint error is at the $\sigma(\beta)=1.5 \times 10^{-3}$ level in both of the data combinations. The improvement in this case is not evident.}
+The results for the I$w$CDM1 model with $Q=\beta H\rho_{\rm c}$ are shown in Fig.~\ref{fig3}. From this figure, we find the situation is similar to that of the I$\Lambda$CDM models. We can see that the CBS data can only provide a 1.23\% measurement for $H_0$, while the combined CBS+GW data constrain the $H_0$ with a 0.47\% accuracy. As for the measurement of $\Omega_{\rm m}$, we find that the constraint result of the CBS+GW data is also better than the CBS data. When adding the GW data, the constraint accuracy of $\Omega_{\rm m}$ will be improved from 2.67\% to 1.26\%. For the parameter $w$, there is a slight improvement when adding the GW data, with the accuracy enhanced from 3.86\% to 3.22\%. For coupling parameter $\beta$, the constraint error is at the $\sigma(\beta)=1.5 \times 10^{-3}$ level in both of the data combinations. The improvement in this case is not evident.
 
-Finally, we will investigate the I$w$CDM2 model with $Q=\beta H_{0}\rho_{\rm c}$, of which the constraint results are shown in Fig.~\ref{fig4}. Totally speaking, we find that the constraint accuracy on $\Omega_{\rm m}$ is pretty worse compared with the cases in the above mentioned three models. When adding the GW data, the constraint on $\Omega_{\rm m}$ is at the 6.65\% level by the combined CBS+GW data, slightly better than the CBS data with a 7.98\% accuracy. In addition, we also find that the CBS data can provide a 1.21\% measurement for $H_0$, and the combined CBS+GW data provides a 0.48\% measurement for $H_0$. Similar to the case of I$w$CDM1 model with $Q=\beta H\rho_{\rm c}$, the accuracy of $w$ only has a slight improvement, which is from 7.65\% to 7.26\%. \red{For the coupling parameter $\beta$, when we adding the GW data, the constraint error would slightly decreased, from $\sigma(\beta)=9.3 \times 10^{-2}$ to $\sigma(\beta)=8.7 \times 10^{-2}$.}
+Finally, we will investigate the I$w$CDM2 model with $Q=\beta H_{0}\rho_{\rm c}$, of which the constraint results are shown in Fig.~\ref{fig4}. Totally speaking, we find that the constraint accuracy on $\Omega_{\rm m}$ is pretty worse compared with the cases in the above mentioned three models. When adding the GW data, the constraint on $\Omega_{\rm m}$ is at the 6.65\% level by the combined CBS+GW data, slightly better than the CBS data with a 7.98\% accuracy. In addition, we also find that the CBS data can provide a 1.21\% measurement for $H_0$, and the combined CBS+GW data provides a 0.48\% measurement for $H_0$. Similar to the case of I$w$CDM1 model with $Q=\beta H\rho_{\rm c}$, the accuracy of $w$ only has a slight improvement, which is from 7.65\% to 7.26\%. For the coupling parameter $\beta$, when we adding the GW data, the constraint error would slightly decreased, from $\sigma(\beta)=9.3 \times 10^{-2}$ to $\sigma(\beta)=8.7 \times 10^{-2}$.
 
-In summary, for all the IDE models considered in this paper, the future GW standard siren data observed by the ET can indeed improve the constraint accuracies on most of the cosmological parameters, e.g., $\Omega_{\rm m}$, $H_0$, and $w$. \red{Additionally, for the coupling constant $\beta$, when adding the GW data, the constraint error would also be reduced, except for the case in I$w$CDM1 model.}
+In summary, for all the IDE models considered in this paper, the future GW standard siren data observed by the ET can indeed improve the constraint accuracies on most of the cosmological parameters, e.g., $\Omega_{\rm m}$, $H_0$, and $w$. Additionally, for the coupling constant $\beta$, when adding the GW data, the constraint error would also be reduced, except for the case in I$w$CDM1 model.
 
 
 
@@ -584,19 +585,18 @@ In summary, for all the IDE models considered in this paper, the future GW stand
 
 In this paper, we have investigated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   how the GW standard sirens impact the parameter estimation for the IDE models. We consider four various IDE models, i.e., the I$\Lambda$CDM1 ($Q=\beta H\rho_{\rm c}$) model, I$\Lambda$CDM2 ($Q=\beta H_{0}\rho_{\rm c}$) model, I$w$CDM1 ($Q=\beta H_{0}\rho_{\rm c}$) model, and I$w$CDM2 ($Q=\beta H_{0}\rho_{\rm c}$) respectively. The conventional optical observational data we used in this paper include, the Planck 2015 CMB data, the BAO measurements, and the SN data of Pantheon compilation. For the GW data, we simulated 1000 GW events based on the ET's ten-years observation. In order to quantify the constraint ability of the additional GW data, we consider two cases of data combination, namely CBS and CBS+GW, to constrain these models.
 
-We find that the future GW standard sirens can significantly improve the constraints on most of the cosmological parameters for all the IDE models. When adding the GW standard siren data, the constraint accuracy of $H_0$ can be remarkably improved, from 0.95\%, 1.18\%, 1.23\%, 1.21\% to the level of 0.44\%, 0.45\%, 0.47\% and 0.48\% for the I$\Lambda$CDM1, I$\Lambda$CDM2, I$w$CDM1, and I$w$CDM2 models, respectively. Moreover, as for the parameter $\Omega_{\rm m}$, the constraint accuracy was improved from 2.66\%, 5.33\%, 2.67\%, 7.98\% to 1.30\%, 2.32\%, 1.26\% and 6.65\%, for the four considered models separately. \red{For the coupling constant $\beta$, when adding the GW data, the constraint absolute error $\sigma(\beta)$ can also be promoted, from $1.2 \times 10^{-3}$, $4.4 \times 10^{-2}$, $9.3 \times 10^{-2}$ to $9.15 \times 10^{-4}$, $2.9 \times 10^{-2}$, and $8.7 \times 10^{-2}$ for the I$\Lambda$CDM1, I$\Lambda$CDM2, and I$w$CDM2 models respectively. While, in the I$w$CDM1 model, the improvement is not conspicuous for this parameter.} For the parameter $w$ in the I$w$CDM models, the constraint accuracy could be improved as well when adding the GW data, i.e., from 3.86\% to 3.22\% for I$w$CDM1 model and from 7.65\% to 8.26\% for I$w$CDM2 model.
+We find that the future GW standard sirens can significantly improve the constraints on most of the cosmological parameters for all the IDE models. When adding the GW standard siren data, the constraint accuracy of $H_0$ can be remarkably improved, from 0.95\%, 1.18\%, 1.23\%, 1.21\% to the level of 0.44\%, 0.45\%, 0.47\% and 0.48\% for the I$\Lambda$CDM1, I$\Lambda$CDM2, I$w$CDM1, and I$w$CDM2 models, respectively. Moreover, as for the parameter $\Omega_{\rm m}$, the constraint accuracy was improved from 2.66\%, 5.33\%, 2.67\%, 7.98\% to 1.30\%, 2.32\%, 1.26\% and 6.65\%, for the four considered models separately. For the coupling constant $\beta$, when adding the GW data, the constraint absolute error $\sigma(\beta)$ can also be promoted, from $1.2 \times 10^{-3}$, $4.4 \times 10^{-2}$, $9.3 \times 10^{-2}$ to $9.15 \times 10^{-4}$, $2.9 \times 10^{-2}$, and $8.7 \times 10^{-2}$ for the I$\Lambda$CDM1, I$\Lambda$CDM2, and I$w$CDM2 models respectively. While, in the I$w$CDM1 model, the improvement is not conspicuous for this parameter. For the parameter $w$ in the I$w$CDM models, the constraint accuracy could be improved as well when adding the GW data, i.e., from 3.86\% to 3.22\% for I$w$CDM1 model and from 7.65\% to 8.26\% for I$w$CDM2 model.
 
 All in all, the precision of the parameter constraint can be promoted effectively with the consideration of future GW observation in the considered four IDE models. The results are consistent with the other extensively studied dark energy models. Thus, we can conclude that the improvement of the parameter constraint precision with future GW standard siren data may be independent of the cosmological models in the background. More DE and MG models should be explored to make this conclusion more reliable.
+
 \begin{acknowledgments}
 This work was supported by the National Natural Science Foundation of China (Grants Nos.~11875102, 11835009, 11690021, and 11522540) and the National Program for Support of Top-Notch Young Professionals.
-
 \end{acknowledgments}
 
 
 
 \begin{thebibliography}{99}
 
- %%observations
 %\cite{Riess:1998cb}
 \bibitem{Riess:1998cb}
   A.~G.~Riess {\it et al.} [Supernova Search Team Collaboration],
